Prepare for Heroku deployment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
    <meta name="description" content="Währungsrechner für alle gängigen Währungen">
    <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/style.css">
+   <!-- Als Web-App ausweisen und Anwendung im Vollbildmodus anzeigen. -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <!-- Namen der Anwendung festlegen. -->
+    <meta name="apple-mobile-web-app-title" content="Currency Calculator">
+    <meta name="application-name" content="Currency Calculator"> <!-- Windows -->
+
+    <!-- Icon der Anwendung festlegen. -->
+    <!-- Icons by Sergei Kokota, www.iconfinder.com/Zerg, Licence: Creative Commons Attribution 2.5 Generic -->
+    <link rel="apple-touch-icon" href="/img/icon-precomposed.png">
+    <!-- Startbild der Anwendung festlegen. -->
+    <link rel="apple-touch-startup-image" href="/img/startup.png">
 </head>
 
 <body>
