Add manifest and adjust to mobile-isher design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
    <meta charset="UTF-8">
    <title>Währungsrechner</title>
+
+   <meta name="theme-color" content="#BADA55">
+   <link rel="manifest" href="manifest.json">
+
+   <meta name="viewport" content="width=device-width,
+   initial-scale=1.0, user-scalable=no">
+
+<!-- Schwarze Statusbar mit weißem Text. -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
    <meta name="description" content="Währungsrechner für alle gängigen Währungen">
    <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/style.css">
