--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
    <meta name="viewport" content="width=device-width,
    initial-scale=1.0, user-scalable=no">
 
-<!-- Schwarze Statusbar mit weißem Text. -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- Schwarze Statusbar mit weißem Text. -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-   <meta name="description" content="Währungsrechner für alle gängigen Währungen">
+   <meta name="description" content="Currency Calculator for Common Currencies">
    <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/style.css">
    <!-- Als Web-App ausweisen und Anwendung im Vollbildmodus anzeigen. -->
@@ -27,9 +27,9 @@
 
     <!-- Icon der Anwendung festlegen. -->
     <!-- Icons by Sergei Kokota, www.iconfinder.com/Zerg, Licence: Creative Commons Attribution 2.5 Generic -->
-    <link rel="apple-touch-icon" href="/img/icon-precomposed.png">
+    <link rel="apple-touch-icon" href="/img/rocket_start.png">
     <!-- Startbild der Anwendung festlegen. -->
-    <link rel="apple-touch-startup-image" href="/img/startup.png">
+    <link rel="apple-touch-startup-image" href="/img/rocket_going.png">
 </head>
 
 <body>
